// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/global/config/parse/host-rules-from-env regression test for #10937 1`] = `
[
  {
    "hostType": "git-tags",
    "matchHost": "gitlab.example-domain.net",
    "password": "some-password",
    "username": "some-user",
  },
]
`;

exports[`workers/global/config/parse/host-rules-from-env supports datasource env token 1`] = `
[
  {
    "hostType": "pypi",
    "token": "some-token",
  },
]
`;

exports[`workers/global/config/parse/host-rules-from-env supports docker username/password 1`] = `
[
  {
    "hostType": "docker",
    "password": "some-password",
    "username": "some-username",
  },
]
`;

exports[`workers/global/config/parse/host-rules-from-env supports domain and host names with case insensitivity 1`] = `
[
  {
    "hostType": "github-tags",
    "matchHost": "github.com",
    "token": "some-token",
  },
  {
    "hostType": "pypi",
    "matchHost": "my.custom.host",
    "password": "some-password",
  },
]
`;

exports[`workers/global/config/parse/host-rules-from-env supports password-only 1`] = `
[
  {
    "hostType": "npm",
    "password": "some-password",
  },
]
`;
